--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Webpack test</title>
 </head>
 <body>
     <div id="app"></div>
-</body>
+<script type="text/javascript" src="index.3c6b84c4c579100d701c.js"></script></body>
 </html>
